# raytracer-cuda

./: CMakeLists.txt
include/: camera.cuh  dim.cuh  hitable.cuh  kernel.cuh  map.cuh  mesh.cuh  object.cuh  optional.cuh  ray.cuh  render.cuh  rgba.cuh  sphere.cuh  timer.h  triangle.cuh
include/hitable/: hitable.cuh  mesh.cuh  sphere.cuh  triangle.cuh  world.cuh
resource/: awp.stl  cube.stl
src/: kernel.cu  main.cpp  render.cu
src/hitable/: mesh.cu  sphere.cu  triangle.cu
